<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
>

    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="75dp">
        <LinearLayout android:layout_width="150dp" android:layout_height="150dp">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cv_logo"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTI"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/username"
            style = "@style/custom_outline"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            style = "@style/custom_outline"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="15dp"
            android:textAlignment="textEnd"
            android:textColor="@color/primary"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:paddingVertical="10dp"
            android:textSize="18dp"
            app:cornerRadius="20dp"
            android:text="@string/login"
    />


    <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:clickable="true"
            android:layout_marginTop="15dp"
            android:textAlignment="textStart"
            android:textColor="@color/primary"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <ImageView
                android:id="@+id/loginFacebookButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/facebook_icn"/>
    </LinearLayout>

</LinearLayout>