<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/username"
            style = "@style/custom_outline"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            style = "@style/custom_outline"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            style = "@style/custom_outline"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reTypePassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:paddingVertical="10dp"
            android:textSize="18dp"
            app:cornerRadius="20dp"
            android:text="@string/signup"
    />

</LinearLayout>