<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

    <androidx.percentlayout.widget.PercentRelativeLayout
            android:id="@+id/rvLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_widthPercent="75%"
                android:src="@drawable/food"
                android:scaleType="centerCrop"
                android:layout_alignParentEnd="true"
                android:alpha="0.5"
        />
        <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/food"
                android:scaleType="centerCrop"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:strokeWidth="15dp"
                app:strokeColor="@color/white"
                app:shapeAppearanceOverlay="@style/roundedImageView"
        />
    </androidx.percentlayout.widget.PercentRelativeLayout>

    <androidx.percentlayout.widget.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="30dp"
            android:layout_weight="1"
            android:orientation="vertical"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="20%"
                android:gravity="end"
                android:paddingEnd="50dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:text="Kyobe Daniel Lumu"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:text="Mobile Software Engineer"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_heightPercent="80%"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">
            <androidx.cardview.widget.CardView
                    android:id="@+id/careerNote"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    android:layout_height="0dp">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">
                    <TextView
                            android:id="@+id/tvCareerNoteHeading"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:text="@string/career_note"
                    />
                    <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <TextView
                                    android:id="@+id/tvCareerNote"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/career_note_text"
                            />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                    android:id="@+id/workExperience"
                    android:layout_width="match_parent"
                    app:cardCornerRadius="10dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_height="0dp">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">
                    <TextView
                            android:id="@+id/tvWorkExperienceHeading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:text="@string/work_experience"
                    />
                    <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <TextView
                                    android:id="@+id/tvWorkExperience"
                                    android:layout_width="match_parent"
                                    android:layout_gravity="start"
                                    android:layout_height="wrap_content"
                                    android:text="@string/work_experience_text"
                            />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.percentlayout.widget.PercentRelativeLayout>

</LinearLayout>